# DataTalk

./: .env.example  .gitignore  MIGRATION_ANGULAR_STRATEGY.md  POSTGRESQL_MIGRATION.md  ROI_ANALYSIS.md  SSE_ANALYSIS.md  STRATEGIE_CORE_INDUSTRIEL.md  TROUBLESHOOTING.md  docker-compose.airbyte.yml  docker-compose.yml  presentation_migration_openshift.md  slides.md
.claude/: CLAUDE.md  hook-data.json  pre-edit-data.json
.claude/hooks/: pre-edit  stop
.claude/plans/: datasource-wizard-v2.md
.github/: CODEOWNERS
.github/workflows/: audit-quality.yml  code-quality.yml
backend/: .coverage  .env.example  Dockerfile  catalog.py  catalog.sqlite.backup.empty  catalog_engine.py  celery_app.py  config.py  constants.py  crypto.py  db.py  db_migrations.py  entrypoint.sh  i18n.py  kpi_service.py  llm_config.py  llm_service.py  llm_utils.py  main.py  mypy.ini  pyproject.toml  requirements.txt  schema.sql  test_api.py  test_resilience.py  type_defs.py  widget_service.py
backend/catalog/: __init__.py  conversations.py  datasets.py  datasources.py  jobs.py  messages.py  questions.py  reports.py  settings.py  tables.py  widgets.py  workflow.py
backend/catalog_engine/: __init__.py  enrichment.py  extraction.py  filters.py  kpis.py  models.py  orchestration.py  persistence.py  questions.py
backend/core/: __init__.py  error_sanitizer.py  pagination.py  query.py  rate_limit.py  state.py
backend/llm_config/: __init__.py  costs.py  models.py  prompts.py  providers.py  secrets.py
backend/llm_service/: __init__.py  calls.py  circuit_breaker.py  errors.py  helpers.py  models.py
backend/locales/: en.json  fr.json
backend/routes/: __init__.py  analytics.py  catalog.py  connectors.py  conversations.py  datasets.py  datasources.py  dependencies.py  llm.py  reports.py  settings.py  tasks.py  widgets.py
backend/routes/catalog/: __init__.py  crud.py  helpers.py  jobs.py  operations.py  streams.py
backend/scripts/: audit_score.py
backend/services/: connector_service.py  native_connectors.py  sync_service.py  task_events.py
backend/tasks/: __init__.py  catalog.py  datasources.py  maintenance.py
backend/tests/: __init__.py  conftest.py  test_contracts.py  test_llm_config.py  test_llm_service.py  test_models.py  test_state.py  test_type_defs.py  test_utils.py
backend/tests/fixtures/: llm_fixtures.py
backend/tests/integration/: __init__.py  test_database_integrity.py
backend/tests/unit/: test_crypto.py  test_db.py  test_db_migrations.py  test_i18n.py  test_kpi_service.py  test_llm_utils.py  test_widget_service.py
backend/tests/unit/catalog/: test_datasources.py  test_reports.py  test_settings.py  test_tables.py  test_widgets.py
backend/tests/unit/catalog_engine/: __init__.py  test_enrichment.py  test_extraction.py  test_kpis.py  test_models.py  test_orchestration.py  test_persistence.py  test_questions.py
backend/tests/unit/core/: test_error_sanitizer.py  test_pagination.py  test_query.py  test_rate_limit.py  test_state.py
backend/tests/unit/llm_config/: __init__.py  test_costs.py  test_models.py  test_prompts.py  test_providers.py  test_secrets.py
backend/tests/unit/llm_service/: __init__.py  test_calls.py  test_circuit_breaker.py  test_errors.py  test_helpers.py  test_models.py
backend/tests/unit/routes/: __init__.py  test_analytics.py  test_connectors.py  test_conversations.py  test_datasources.py  test_dependencies.py  test_llm.py  test_reports.py  test_settings.py  test_widgets.py
backend/tests/unit/services/: test_connector_service.py  test_sync_service.py
docker/postgres-init/: 01-schema.sql  02-data.sql  evaluation_categories.csv
docs/: airbyte-cdc-setup.md  airbyte-postgres-to-duckdb.md
frontend/: Dockerfile  ESLINT_WARNINGS.md  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json
frontend-angular/: .dependency-cruiser.js  Dockerfile  angular.json  eslint.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend-angular/.husky/: pre-commit
frontend-angular/src/: index.html  styles.css
frontend-angular/src/app/: app.config.ts  app.routes.ts
frontend-angular/src/styles/: tailwind.css
frontend/e2e/: functional-flow.spec.ts
frontend/src/__tests__/: setup.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnalyticsZone.tsx  AppShell.tsx  Chart.tsx  ChartCard.tsx  ChatZone.tsx  DataTable.tsx  DatasetHeader.tsx  DatasetNode.tsx  ErrorDisplay.tsx  GlobalHeader.tsx  KpiCard.tsx  KpiCardCompact.tsx  LanguageProvider.tsx  LanguageToggle.tsx  PredefinedQuestions.tsx  Sidebar.tsx  StoreProvider.tsx  SyncWarningBanner.tsx  ThemeProvider.tsx  ThemeStyleSelector.tsx  ThemeToggle.tsx  VisualizationZone.tsx  icons.tsx
frontend/src/hooks/: useConversation.ts  useJobCompletionListener.ts  useLayout.ts  useRetryJob.ts  useSyncDatasource.ts  useTaskStream.ts  useTranslation.ts
frontend/src/lib/: api.ts  connectors.ts  (+1 more)
g7-analytics/: ARCHITECTURE.md  E2E_TEST_SPEC.md  package-lock.json  package.json
g7-analytics/backend/: catalog.py  catalog_engine.py  create_categories_view.py  crypto.py  db.py  enrich_comments.py  kpi_service.py  llm_config.py  llm_service.py  main.py  migrate_api_key.py  requirements.txt  schema.sql  seed_catalog.py  seed_llm.py  seed_prompts.py  seed_questions.py  sync_agent.py  widget_service.py
g7-analytics/data/: evaluations.parquet
g7-analytics/e2e/: functional-flow.spec.ts
g7-analytics/playwright-report/: index.html
g7-analytics/scripts/: analyze-code.sh  query.py
infra-dashboard/: Dockerfile  docker-compose.yml  expected-architecture-reactflow.json  index.html  package-lock.json  package.json  tsconfig.server.json  vite.config.ts  vitest.config.ts
infra-dashboard/src/: App.tsx  index.css
postgres/: init.sql  postgresql.conf
redis/: redis.conf
scripts/: analyze-code.sh  audit_score.py  create_categories_view.py  enrich_comments.py  import_pg_to_duckdb.py  migrate-to-named-volumes.sh  migrate_sqlite_to_postgres.py  sync_agent.py  test_duckdb_connection.py  test_endpoints.sh
wrenai/: config.yaml  init-db.sql
(+240 files in other folders)
